# smartdashboard-pub

./: README.md
assets/fonts/: inter_12_400.c  inter_14_400.c  inter_14_600.c  inter_16_400.c  inter_16_500.c  inter_18_400.c  inter_20_600.c  inter_24_600.c  inter_30_600.c  inter_60_600.c
simulator/: CMakeLists.txt  lv_conf.h  main.c
src/: calendar_service.c  calendar_service.h  clock_service.c  clock_service.h  config_sheet.c  config_sheet.h  control_sheet.c  control_sheet.h  dashboard_colours.h  dashboard_config.c  dashboard_config.h  dashboard_icons.c  dashboard_icons.h  dashboard_log.h  dashboard_lv_utils.c  dashboard_lv_utils.h  dashboard_screen.h  date_picker.c  date_picker.h  display_sleep.c  display_sleep.h  event_edit.c  event_edit.h  google_calendar.c  google_calendar.h  google_credentials.h.example  ha_config.h.example  ha_credentials.c  ha_credentials.h  ha_entities.h.example  ha_http_config.c  ha_http_config.h  ha_ws_client.c  ha_ws_client.h  home_calendar.c  home_calendar.h  home_events_panel.c  home_events_panel.h  home_ha_bridge.c  home_ha_bridge.h  (+26 more)
src/platform/: http_client.h  http_client_fw.c  http_client_sim.c
tools/: embed_icons.py
